working/minio-tenant/HTTPRoute_minio.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
  namespace: minio-tenant-default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: default-minio-tenant-console
          port: 9090
          weight: 1
      matches:
        - headers:
            - name: Host
              type: RegularExpression
              value: minio\..*
          path:
            type: PathPrefix
            value: /
